Suppress warnings about Retrofit during test execution